exports[`components <ActivityListItem /> renders with hyperlinks 1`] = `
<div
  className="m-b-3">
  <div
    className="row">
    <div
      className="col-xs-12">
      <p
        className="m-b">
        <span
          className="title-label">
          Test 24
        </span>
        <span
          className="subtitle-label">
           - 
          Fri Dec 02 2016 (Ride)
        </span>
      </p>
      <table>
        <tbody>
          <tr>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Distance
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                0
                 km
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Elapsed Time
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                5
                 minutes
              </span>
            </td>
            <td
              className="m-r-2">
              <span
                className="m-r">
                <em>
                  Type
                </em>
              </span>
            </td>
            <td>
              Ride
            </td>
          </tr>
          <tr>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Avg Speed
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                NaN
                 kph
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Max Speed
                </em>
              </span>
            </td>
            <td>
              34
               kph
            </td>
            <td
              className="m-r-2">
              <span
                className="m-r">
                <em>
                  Trainer
                </em>
              </span>
            </td>
            <td>
              Yes
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="m-t">
        <a
          className="m-r-2"
          onClick={[Function]}
          style={Object {}}>
          Compare Segments
        </a>
        <a
          className="m-r-2"
          onClick={[Function]}
          style={Object {}}>
          3D Route Profile
        </a>
      </div>
    </div>
  </div>
  <hr />
</div>
`;

exports[`components <ActivityListItem /> renders without hyperlinks when there are no segments 1`] = `
<div
  className="m-b-3">
  <div
    className="row">
    <div
      className="col-xs-12">
      <p
        className="m-b">
        <span
          className="title-label">
          Test 24
        </span>
        <span
          className="subtitle-label">
           - 
          Fri Dec 02 2016 (Ride)
        </span>
      </p>
      <table>
        <tbody>
          <tr>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Distance
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                0
                 km
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Elapsed Time
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                5
                 minutes
              </span>
            </td>
            <td
              className="m-r-2">
              <span
                className="m-r">
                <em>
                  Type
                </em>
              </span>
            </td>
            <td>
              Ride
            </td>
          </tr>
          <tr>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Avg Speed
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                NaN
                 kph
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Max Speed
                </em>
              </span>
            </td>
            <td>
              34
               kph
            </td>
            <td
              className="m-r-2">
              <span
                className="m-r">
                <em>
                  Trainer
                </em>
              </span>
            </td>
            <td>
              Yes
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="m-t" />
    </div>
  </div>
  <hr />
</div>
`;

exports[`components <ActivityListItem /> renders without hyperlinks when there are segments but includeHyperlinks is false 1`] = `
<div
  className="m-b-3">
  <div
    className="row">
    <div
      className="col-xs-12">
      <p
        className="m-b">
        <span
          className="title-label">
          Test 24
        </span>
        <span
          className="subtitle-label">
           - 
          Fri Dec 02 2016 (Ride)
        </span>
      </p>
      <table>
        <tbody>
          <tr>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Distance
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                0
                 km
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Elapsed Time
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                5
                 minutes
              </span>
            </td>
            <td
              className="m-r-2">
              <span
                className="m-r">
                <em>
                  Type
                </em>
              </span>
            </td>
            <td>
              Ride
            </td>
          </tr>
          <tr>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Avg Speed
                </em>
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                NaN
                 kph
              </span>
            </td>
            <td
              width="0">
              <span
                className="m-r">
                <em>
                  Max Speed
                </em>
              </span>
            </td>
            <td>
              34
               kph
            </td>
            <td
              className="m-r-2">
              <span
                className="m-r">
                <em>
                  Trainer
                </em>
              </span>
            </td>
            <td>
              Yes
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <hr />
</div>
`;
